force-app/main/default/objects/ms_Analytics__c/ms_Analytics__c.object-meta.xml
<CustomObject>
    <label>Analytics</label>
    <nameField>
        <label>Analytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>