force-app/main/default/objects/ms_Analytics__c/fields/ms_Bounce_rate__c.field-meta.xml
<CustomField>
    <fullName>ms_Bounce_rate__c</fullName>
    <label>Bounce rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>