force-app/main/default/objects/ms_Analytics__c/fields/ms_Channel__c.field-meta.xml
<CustomField>
    <fullName>ms_Channel__c</fullName>
    <formula>TEXT(ms_Marketing_Inventory__r.ms_Channel__c)</formula>
    <label>Channel</label>
    <type>Text</type>
</CustomField>