force-app/main/default/objects/ms_Analytics__c/fields/ms_Deal__c.field-meta.xml
<CustomField>
    <fullName>ms_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Analytics</relationshipLabel>
    <relationshipName>Analytics</relationshipName>
    <type>Lookup</type>
</CustomField>