force-app/main/default/objects/ms_Analytics__c/fields/ms_Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>ms_Deal_Name__c</fullName>
    <formula>ms_Deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Name</label>
    <type>Text</type>
</CustomField>