force-app/main/default/objects/ms_Analytics__c/fields/ms_Deal_Title__c.field-meta.xml
<CustomField>
    <fullName>ms_Deal_Title__c</fullName>
    <formula>ms_Deal__r.Deal_ID_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Title</label>
    <type>Text</type>
</CustomField>