force-app/main/default/objects/ms_Analytics__c/fields/ms_Demographics__c.field-meta.xml
<CustomField>
    <fullName>ms_Demographics__c</fullName>
    <label>Demographics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>