force-app/main/default/objects/ms_Analytics__c/fields/ms_Geo__c.field-meta.xml
<CustomField>
    <fullName>ms_Geo__c</fullName>
    <label>Geo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>