force-app/main/default/objects/ms_Analytics__c/fields/ms_Online_Sales__c.field-meta.xml
<CustomField>
    <fullName>ms_Online_Sales__c</fullName>
    <label>Online Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>