force-app/main/default/objects/ms_Analytics__c/fields/ms_Page_View__c.field-meta.xml
<CustomField>
    <fullName>ms_Page_View__c</fullName>
    <label>Page View</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>