force-app/main/default/objects/ms_Analytics__c/fields/ms_Placement__c.field-meta.xml
<CustomField>
    <fullName>ms_Placement__c</fullName>
    <formula>TEXT( ms_Marketing_Inventory__r.ms_Placement__c)</formula>
    <label>Placement</label>
    <type>Text</type>
</CustomField>