force-app/main/default/objects/ms_Analytics__c/fields/ms_Supplier__c.field-meta.xml
<CustomField>
    <fullName>ms_Supplier__c</fullName>
    <formula>TEXT(ms_Marketing_Inventory__r.ms_Supplier__c)</formula>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>