force-app/main/default/objects/ms_Analytics__c/fields/ms_Time_on_Site__c.field-meta.xml
<CustomField>
    <fullName>ms_Time_on_Site__c</fullName>
    <label>Time on Site</label>
    <type>Time</type>
</CustomField>