force-app/main/default/objects/ms_Analytics__c/fields/ms_Title__c.field-meta.xml
<CustomField>
    <fullName>ms_Title__c</fullName>
    <formula>TEXT( ms_Marketing_Inventory__r.ms_Title__c  )</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>