force-app/main/default/objects/ms_Analytics__c/fields/ms_Traffic_Source__c.field-meta.xml
<CustomField>
    <fullName>ms_Traffic_Source__c</fullName>
    <label>Traffic Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>