force-app/main/default/objects/ms_Analytics__c/fields/ms_Type__c.field-meta.xml
<CustomField>
    <fullName>ms_Type__c</fullName>
    <description>MS_</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>