force-app/main/default/objects/ms_Analytics__c/fields/ms_Users__c.field-meta.xml
<CustomField>
    <fullName>ms_Users__c</fullName>
    <label>Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>