force-app/main/default/objects/ms_Analytics__c/fields/TestTIme__c.field-meta.xml
<CustomField>
    <fullName>TestTIme__c</fullName>
    <formula>TEXT( ms_Time_on_Site__c )</formula>
    <label>TestTIme</label>
    <type>Text</type>
</CustomField>