force-app/main/default/objects/ms_Analytics__c/recordTypes/Channel_Analytics.recordType-meta.xml
<RecordType>
    <fullName>Channel_Analytics</fullName>
    <active>true</active>
    <label>Channel Analytics</label>
</RecordType>