force-app/main/default/objects/ms_Analytics__c/recordTypes/Deal_Analytics.recordType-meta.xml
<RecordType>
    <fullName>Deal_Analytics</fullName>
    <active>true</active>
    <label>Deal Analytics</label>
</RecordType>